--- a/src/App.xaml
+++ b/src/App.xaml
@@ -1,11 +1,11 @@
 ﻿<Application x:Class="KRibbon.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:KRibbon"
-             xmlns:lang="clr-namespace:KRibbon.Logic.Generic"
-             xmlns:cfg="clr-namespace:KRibbon.ViewModel.ConfiguracionViewModel"
-             xmlns:vm="clr-namespace:KRibbon.ViewModel.GenericViewModel"
-             xmlns:ms="clr-namespace:KRibbon.ViewModel.MaestrosViewModel"
+             xmlns:local="clr-namespace:KarveCar"
+             xmlns:lang="clr-namespace:KarveCar.Logic.Generic"
+             xmlns:cfg="clr-namespace:KarveCar.ViewModel.ConfiguracionViewModel"
+             xmlns:vm="clr-namespace:KarveCar.ViewModel.GenericViewModel"
+             xmlns:ms="clr-namespace:KarveCar.ViewModel.MaestrosViewModel"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
         <ObjectDataProvider x:Key="ResourceLanguage" 
