--- a/src/View/DataGridUserControl.xaml
+++ b/src/View/DataGridUserControl.xaml
@@ -1,10 +1,10 @@
-﻿<DataGrid x:Class="KRibbon.View.DataGridUserControl"
+﻿<DataGrid x:Class="KarveCar.View.DataGridUserControl"
           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
           xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
           xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-          xmlns:local="clr-namespace:KRibbon.View"
+          xmlns:local="clr-namespace:KarveCar.View"
           mc:Ignorable="d" 
           
           HorizontalAlignment="Left"
