--- a/src/View/MainWindow.xaml
+++ b/src/View/MainWindow.xaml
@@ -1,14 +1,14 @@
-﻿<r:RibbonWindow x:Class="KRibbon.View.MainWindow"    
+﻿<r:RibbonWindow x:Class="KarveCar.View.MainWindow"    
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
                 xmlns:r="clr-namespace:Microsoft.Windows.Controls.Ribbon;assembly=RibbonControlsLibrary"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"                
-                xmlns:local="clr-namespace:KRibbon"
-                xmlns:vm="clr-namespace:KRibbon.ViewModel.GenericViewModel"                
+                xmlns:local="clr-namespace:KarveCar"
+                xmlns:vm="clr-namespace:KarveCar.ViewModel.GenericViewModel"                
                 xmlns:sys="clr-namespace:System;assembly=mscorlib"
-                xmlns:uc="clr-namespace:KRibbon.View"
+                xmlns:uc="clr-namespace:KarveCar.View"
                 mc:Ignorable="d"
                 Title="MainWindow" x:Name="mainwindow" WindowState="Maximized" Closing="mainwindow_Closing">
     <r:RibbonWindow.DataContext>
