--- a/src/View/TabItemUserControl.xaml
+++ b/src/View/TabItemUserControl.xaml
@@ -1,10 +1,10 @@
-﻿<TabItem x:Class="KRibbon.View.TabItemUserControl"
+﻿<TabItem x:Class="KarveCar.View.TabItemUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:KRibbon.View"
-             xmlns:main="clr-namespace:KRibbon"
+             xmlns:local="clr-namespace:KarveCar.View"
+             xmlns:main="clr-namespace:KarveCar"
              mc:Ignorable="d">
     <TabItem.Resources>
         <DataTemplate x:Key="TabHeader" DataType="TabItem">
