--- a/src/Main/App.xaml
+++ b/src/Main/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Main.App"
+﻿<Application x:Class="MainWindow.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Main"
+             xmlns:local="clr-namespace:MainWindow"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
