--- a/src/ToolBarModule/View/KarveToolBar.xaml
+++ b/src/ToolBarModule/View/KarveToolBar.xaml
@@ -7,18 +7,24 @@
              mvvm1:ViewModelLocator.AutoWireViewModel="True"
              xmlns:local="clr-namespace:ToolBarModule.View"
              >
-    <!-- <r:RibbonWindow.DataContext>
-        <vm:SetLanguagesViewModel/>
-    </r:RibbonWindow.DataContext>
-    <vm:SetLanguagesViewModel/>
+    <UserControl.Resources>
+        <Style x:Key="ImageEnabled" TargetType="Image">
+            <Style.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Opacity" Value="0.50"></Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
+    
     <ToolBarTray x:Name="tbtAcciones" DockPanel.Dock="Top" >
         <ToolBar x:Name="tbAcciones" HorizontalAlignment="Left" ToolBar.OverflowMode="Never" >
             <Button x:Name="tbbtnNuevo" 
                     HorizontalAlignment="Left"
                     IsEnabled="False"
-                    DataContext="{StaticResource toolBarViewModel}" >
+                    >
                 <StackPanel>
-                    <Image Source="..\..\Images\new.png" Stretch="Fill" Height="35" />
+                    <Image Source="..\..\Images\new.png" Stretch="Fill" Height="35"  Style="{StaticResource ImageEnabled}" />
                     <TextBlock Text="{Binding ltbbtnNuevo, Source={StaticResource ResourceLanguage}}" HorizontalAlignment="Center"/>
                 </StackPanel>
                 <Button.ToolTip>
@@ -30,13 +36,13 @@
                 <Button.InputBindings>
                     <KeyBinding Key="N" 
                                 Modifiers="Ctrl" 
-                                Command="{Binding NuevoToolBarCommand}" 
+                                Command="{Binding NewCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <KeyBinding Key="Return"                                                
-                                Command="{Binding NuevoToolBarCommand}" 
+                                Command="{Binding NewCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <MouseBinding MouseAction="LeftClick"
-                                  Command="{Binding NuevoToolBarCommand}" 
+                                  Command="{Binding NewCommand}" 
                                   CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
 
                 </Button.InputBindings>
@@ -44,9 +50,9 @@
             <Button x:Name="tbbtnEditar" 
                     HorizontalAlignment="Left"
                     IsEnabled="False"
-                    DataContext="{StaticResource toolBarViewModel}" >
+                    >
                 <StackPanel>
-                    <Image Source="..\Images\edit.png" Stretch="Fill" Height="35" />
+                    <Image Source="..\..\Images\edit.png" Stretch="Fill" Height="35" />
                     <TextBlock Text="{Binding ltbbtnEditar, Source={StaticResource ResourceLanguage}}" HorizontalAlignment="Center"/>
                 </StackPanel>
                 <Button.ToolTip>
@@ -58,13 +64,14 @@
                 <Button.InputBindings>
                     <KeyBinding Key="E" 
                                 Modifiers="Ctrl" 
-                                Command="{Binding EditarToolBarCommand}" 
+                                Command="{Binding EditCommand}" 
+                                
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <KeyBinding Key="Return"                                                
-                                Command="{Binding EditarToolBarCommand}" 
+                                Command="{Binding EditCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <MouseBinding MouseAction="LeftClick"
-                                  Command="{Binding EditarToolBarCommand}" 
+                                  Command="{Binding EditCommand}" 
                                   CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
 
                 </Button.InputBindings>
@@ -72,7 +79,8 @@
             <Button x:Name="tbbtnEliminar" 
                     HorizontalAlignment="Left"
                     IsEnabled="False"
-                    DataContext="{StaticResource toolBarViewModel}" >
+                    DataContext="KarveToolBarViewModel"
+                    >
                 <StackPanel>
                     <Image Source="..\..\Images\delete.png" Stretch="Fill" Height="35" />
                     <TextBlock Text="{Binding ltbbtnEliminar, Source={StaticResource ResourceLanguage}}" HorizontalAlignment="Center"/>
@@ -86,20 +94,20 @@
                 <Button.InputBindings>
                     <KeyBinding Key="Delete" 
                                 Modifiers="Ctrl" 
-                                Command="{Binding EliminarToolBarCommand}" 
+                                Command="{Binding DeleteCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <KeyBinding Key="Return"                                                
-                                Command="{Binding EliminarToolBarCommand}" 
+                                Command="{Binding DeleteCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <MouseBinding MouseAction="LeftClick"
-                                  Command="{Binding EliminarToolBarCommand}" 
+                                  Command="{Binding DeleteCommand}" 
                                   CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                 </Button.InputBindings>
             </Button>
             <Button x:Name="tbbtnGuardar" 
                     HorizontalAlignment="Left"
                     IsEnabled="False"
-                    DataContext="{StaticResource toolBarViewModel}" >
+                    >
                 <StackPanel>
                     <Image Source="..\..\Images\save.png" Stretch="Fill" Height="35" />
                     <TextBlock Text="{Binding ltbbtnGuardar, Source={StaticResource ResourceLanguage}}" HorizontalAlignment="Center"/>
@@ -113,20 +121,19 @@
                 <Button.InputBindings>
                     <KeyBinding Key="G" 
                                 Modifiers="Ctrl" 
-                                Command="{Binding GuardarToolBarCommand}" 
+                                Command="{Binding SaveCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <KeyBinding Key="Return"                                                
-                                Command="{Binding GuardarToolBarCommand}" 
+                                Command="{Binding SaveCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <MouseBinding MouseAction="LeftClick"
-                                  Command="{Binding GuardarToolBarCommand}" 
+                                  Command="{Binding SaveCommand}" 
                                   CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                 </Button.InputBindings>
             </Button>
             <Button x:Name="tbbtnCancelar"
                     HorizontalAlignment="Left"
-                    IsEnabled="False"
-                    DataContext="{StaticResource toolBarViewModel}" >
+                    IsEnabled="False">
                 <StackPanel>
                     <Image Source="..\..\Images\cancel.png" Stretch="Fill" Height="35" />
                     <TextBlock Text="{Binding ltbbtnCancelar, Source={StaticResource ResourceLanguage}}" HorizontalAlignment="Center"/>
@@ -140,20 +147,20 @@
                 <Button.InputBindings>
                     <KeyBinding Key="C" 
                                 Modifiers="Ctrl" 
-                                Command="{Binding CancelarToolBarCommand}" 
+                                Command="{Binding CancelCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <KeyBinding Key="Return"                                                
-                                Command="{Binding CancelarToolBarCommand}" 
+                                Command="{Binding CancelCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <MouseBinding MouseAction="LeftClick"
-                                  Command="{Binding CancelarToolBarCommand}" 
+                                  Command="{Binding CancelCommand}" 
                                   CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                 </Button.InputBindings>
             </Button>
             <Button x:Name="tbbtnImprimir" 
                     HorizontalAlignment="Left"
                     IsEnabled="False"
-                    DataContext="{StaticResource toolBarViewModel}" >
+                    >
                 <StackPanel>
                     <Image Source="..\..\Images\print.png" Stretch="Fill" Height="35" />
                     <TextBlock Text="{Binding ltbbtnImprimir, Source={StaticResource ResourceLanguage}}" HorizontalAlignment="Center"/>
@@ -167,20 +174,20 @@
                 <Button.InputBindings>
                     <KeyBinding Key="I" 
                                 Modifiers="Ctrl" 
-                                Command="{Binding ImprimirToolBarCommand}" 
+                                Command="{Binding PrintCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <KeyBinding Key="Return"                                                
-                                Command="{Binding ImprimirToolBarCommand}" 
+                                Command="{Binding PrintCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <MouseBinding MouseAction="LeftClick"
-                                  Command="{Binding ImprimirToolBarCommand}" 
+                                  Command="{Binding PrintCommand}" 
                                   CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                 </Button.InputBindings>
             </Button>
             <Button x:Name="tbbtnAnterior" 
                     HorizontalAlignment="Left"
                     IsEnabled="False"
-                    DataContext="{StaticResource toolBarViewModel}" >
+                    >
                 <StackPanel>
                     <Image Source="..\..\Images\previous.png" Stretch="Fill" Height="35" />
                     <TextBlock Text="{Binding ltbbtnAnterior, Source={StaticResource ResourceLanguage}}" HorizontalAlignment="Center"/>
@@ -194,20 +201,20 @@
                 <Button.InputBindings>
                     <KeyBinding Key="Left" 
                                 Modifiers="Ctrl" 
-                                Command="{Binding AnteriorToolBarCommand}" 
+                                Command="{Binding PreviousCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <KeyBinding Key="Return"                                                
-                                Command="{Binding AnteriorToolBarCommand}" 
+                                Command="{Binding PreviousCommand}" 
                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     <MouseBinding MouseAction="LeftClick"
-                                  Command="{Binding AnteriorToolBarCommand}" 
+                                  Command="{Binding PreviousCommand}" 
                                   CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                 </Button.InputBindings>
             </Button>
             <Button x:Name="tbbtnSiguiente" 
                     HorizontalAlignment="Left"
                     IsEnabled="False"
-                    DataContext="{StaticResource toolBarViewModel}" >
+                    >
                 <StackPanel>
                     <Image Source="..\..\Images\next.png" Stretch="Fill" Height="35" />
                     <TextBlock Text="{Binding ltbbtnSiguiente, Source={StaticResource ResourceLanguage}}" HorizontalAlignment="Center"/>
@@ -233,8 +240,10 @@
             </Button>
             <Button x:Name="tbbtnSalir" 
                     HorizontalAlignment="Left"
-                    IsEnabled="False"
-                    DataContext="{StaticResource toolBarViewModel}" >
+                    IsEnabled="True"
+                    Command="{Binding ExitCommand}" 
+                   
+                    >
                 <StackPanel>
                     <Image Source="..\..\Images\exit.png" Stretch="Fill" Height="35" />
                     <TextBlock Text="{Binding ltbbtnSalir, Source={StaticResource ResourceLanguage}}" HorizontalAlignment="Center"/>
@@ -248,14 +257,11 @@
                 <Button.InputBindings>
                     <KeyBinding Key="Q" 
                                 Modifiers="Ctrl" 
-                                Command="{Binding SalirToolBarCommand}" 
-                                CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
+                                />
                     <KeyBinding Key="Return"                                                
-                                Command="{Binding SalirToolBarCommand}" 
-                                CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
+                                />
                     <MouseBinding MouseAction="LeftClick"
-                                  Command="{Binding SalirToolBarCommand}" 
-                                  CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
+                                  />
                 </Button.InputBindings>
             </Button>
         </ToolBar>
@@ -267,7 +273,7 @@
                         BorderBrush="Transparent" Background="Transparent"
                         HorizontalAlignment="Left"
                         IsEnabled="False"
-                        DataContext="{StaticResource toolBarViewModel}" >
+                        >
                     <Button.ToolTip>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text=" (Ctrl+S)" />
@@ -286,12 +292,11 @@
                                       CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Name}" />
                     </Button.InputBindings>
                     <StackPanel>
-                        <Image Source="..\Images\search.png" Stretch="Fill" Height="35" />
+                        <Image Source="..\..\Images\search.png" Stretch="Fill" Height="35" />
                         <TextBlock Text="{Binding ltbbtnBuscar, Source={StaticResource ResourceLanguage}}" HorizontalAlignment="Center"/>
                     </StackPanel>
                 </Button>
             </TextBlock>
         </ToolBar>
     </ToolBarTray>
- -->
-</UserControl>
+ </UserControl>
