--- a/src/View/CintaOpcionesUserControl.xaml
+++ b/src/View/CintaOpcionesUserControl.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:KarveCar.View"
              mc:Ignorable="d" 
              Height="200" Width="300" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,25,0,0">
-    <StackPanel x:Name="stckpCintaOpciones">
+    <StackPanel x:Name="stckpCintaOpciones" Background="{StaticResource WindowBackgroundBrush}" >
         <Border BorderBrush="Black" BorderThickness="1,1,1,1" Height="200" CornerRadius="4" >
             <Grid x:Name="grdCintaOpciones">
                 <Grid.ColumnDefinitions>
