--- a/src/View/TabItemUserControl.xaml
+++ b/src/View/TabItemUserControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:KarveCar.View"
              xmlns:main="clr-namespace:KarveCar"
-             mc:Ignorable="d">
+             mc:Ignorable="d" Background="{StaticResource WindowBackgroundBrush}">
     <TabItem.Resources>
         <DataTemplate x:Key="TabHeader" DataType="TabItem">
             <DockPanel>
