+ Added payment form. + added office form. + added new car icon. + added a new payment resolver view model Pendent to refaftor the structure.

--- a/src/App.xaml
+++ b/src/App.xaml
@@ -34,12 +34,11 @@
 
             <vm:CloseTabItemViewModel x:Key="closeTabItemViewModel"/>
             <vm:CloseWindowViewModel  x:Key="closeWindowViewModel"/>
-            <vm:SetLanguagesViewModel x:Key="setLanguagesViewModel"/>
-
+         
             <!-- Maestros-->
             <ms:MostrarAuxiliaresViewModel x:Key="mostrarAuxiliaresViewModel"/>
             <ms:GrupoVehiculoViewModel     x:Key="grupoVehiculoViewModel"/>
-
+            <ms:PaymentResolverViewModel x:Key="paymentResolverViewModel"/>
             <!-- Configuracion-->
             <cfg:CintaOpcionesViewModel x:Key="cintaOpcionesViewModel"/>
         </ResourceDictionary>
