--- a/src/View/MainWindow.xaml
+++ b/src/View/MainWindow.xaml
@@ -1800,20 +1800,22 @@
                             Label="{Binding lrbtnValidar, Source={StaticResource ResourceLanguage}}"/>
             </r:Ribbon>
             <!--</ScrollViewer>-->
-            <Grid Grid.IsSharedSizeScope="True" ShowGridLines="false">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"></RowDefinition>
-                    <RowDefinition Height="auto"></RowDefinition>
-                </Grid.RowDefinitions>
+            <ScrollViewer>
+                <Grid Grid.IsSharedSizeScope="True" ShowGridLines="false">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"></RowDefinition>
+                        <RowDefinition Height="auto"></RowDefinition>
+                    </Grid.RowDefinitions>
 
-                <ContentControl Grid.Row="0" prism:RegionManager.RegionName="KarveToolBar"/>
-                <TabControl     Grid.Row="1" x:Name="tbControl" SelectionChanged="tbControl_SelectionChanged">
-                    <ScrollViewer/>
-                </TabControl>
-            </Grid>
+                    <ContentControl Grid.Row="0" prism:RegionManager.RegionName="KarveToolBar"/>
+                    <TabControl     Grid.Row="1" x:Name="tbControl" SelectionChanged="tbControl_SelectionChanged">
+
+                    </TabControl>
+                </Grid>
+            </ScrollViewer>
         </DockPanel>
     </Grid>
 </r:RibbonWindow>
